--- a/principal/principal.html
+++ b/principal/principal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Autoatendimento</title>
+  <title>Autoatendimenti</title>
   <link rel="stylesheet" href="../principal/principal.css" />
 </head>
 <body>
