--- a/cupom/cupom.html
+++ b/cupom/cupom.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <title>Cupom</title>
   <link rel="stylesheet" href="../cupom/cupom.css">
 </head>
+
 <body>
-  <div class="cupom-container">
-    <h1 class="titulo">CUPOM</h1>
 
-    <div class="search-area">
+  <!-- Área principal da página -->
+  <main class="cupom-container">
+
+    <!-- Cabeçalho com o título da página -->
+    <header>
+      <h1 class="titulo">CUPOM</h1>
+    </header>
+
+    <!-- Seção da área de busca de cupons -->
+    <section class="search-area">
       <input type="text" id="inputCupom" placeholder="Digite seu cupom...">
-      <button onclick="verificarCupom()">
-        🔍
-      </button>
-    </div>
+      <button onclick="verificarCupom()">🔍</button>
+    </section>
 
-    <div id="mensagem" class="mensagem"></div>
+    <!-- Seção para mensagens ao usuário -->
+    <section id="mensagem" class="mensagem"></section>
 
-    <div class="botoes">
+    <!-- Rodapé com os botões de navegação -->
+    <footer class="botoes">
       <button class="voltar" onclick="voltar()">Voltar</button>
       <button class="pagar" onclick="pagar()">pagar</button>
-    </div>
-  </div>
+    </footer>
+
+  </main>
 
   <script src="../cupom/cupom.js"></script>
+
 </body>
 </html>
